[package]
name = "zero2mail"
version = "0.1.0"
edition = "2018"
authors = ["Falko Dulat <falko.dulat@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2mail"

[dependencies]
actix-web = "=4.0.0-beta.6"
actix-http = "=3.0.0-beta.6"
actix-service = "=2.0.0"
serde = {version= "1.0.126", features = ["derive"]}

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.3"
tokio = "1.6.1"
